--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,19 @@
             display: none; text-align: center; color: white; background: rgba(0,0,0,0.9); 
             padding: 30px; border: 2px solid #00f2ff; z-index: 10; 
         }
+
+        #start-btn {
+            position: absolute; bottom: 50px; left: 50%; transform: translateX(-50%);
+            padding: 15px 40px; font-size: 20px; background: #00ff66; border: none;
+            cursor: pointer; font-weight: bold; z-index: 20; border-radius: 5px;
+        }
+
         input { font-size: 30px; width: 100px; text-align: center; }
     </style>
 </head>
 <body>
+
+    <button id="start-btn" onclick="window.startRace()">START RACE</button>
 
     <div id="hud">
         <h2 id="question">Question</h2>
